--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -33,6 +33,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
     "express": "^5.1.0",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
